Fix button alignment, give count more space

--- a/src/components/Controls.css
+++ b/src/components/Controls.css
@@ -6,7 +6,7 @@ button {
   font-family: "Anonymous Pro", monospace;
   font-size: 24px;
   background: #353535;
-  padding: 40px;
+  padding: 40px 0;
   cursor: pointer;
 }
 
